--- a/src/app.scss
+++ b/src/app.scss
@@ -24,10 +24,9 @@ body {
 }
 
 .content {
+	@include flex(column, default, default);
 	min-height: 100vh;
 	height: 100%;
-	display: flex;
-	flex-direction: column;
 	overflow-x: hidden;
 }
 
@@ -37,9 +36,23 @@ h2 {
 	font-weight: 400;
 }
 
+h1 {
+	font-size: 3rem;
+}
+
 a {
 	color: inherit;
 	text-decoration: none;
+}
+
+.pfp {
+	border-radius: 50%;
+	transition: 1s;
+
+	&:hover {
+		cursor: pointer;
+		transform: rotate(360deg);
+	}
 }
 
 .slash {
@@ -48,9 +61,23 @@ a {
 	transition: 0.2s;
 	transform: rotate(0deg);
 	transform-origin: 30% 60%;
+
+	&::after {
+		content: '>';
+		display: block;
+		position: absolute;
+		transform: rotate(-72deg) scale(0.5, 0);
+		top: -8px;
+		left: 2px;
+		transition: 0.2s;
+	}
 }
 
 a:hover .slash {
 	width: 2ch;
 	transform: rotate(72deg);
+
+	&::after {
+		transform: rotate(-72deg) scale(1, 1);
+	}
 }
