--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,8 @@
 :root {
 	--bg: hsl(220, 10%, 8%);
 	--bg-2: hsl(220, 10%, 15%);
-	--text: hsl(220, 30%, 85%);
-	--text-2: hsl(220, 12%, 65%);
+	--txt: hsl(220, 30%, 85%);
+	--txt-2: hsl(220, 12%, 65%);
 	--blue: hsl(190, 70%, 50%);
 	--purple: hsl(240, 80%, 66%);
 	--pink: hsl(279, 80%, 66%);
@@ -24,7 +24,7 @@ html {
 body {
 	@include flex(column, default, default);
 	background: var(--bg);
-	color: var(--text);
+	color: var(--txt);
 	margin: 0;
 	min-height: 100vh;
 	height: 100%;
@@ -37,20 +37,24 @@ h3,
 h4 {
 	font-family: 'Space Mono', monospace;
 	font-weight: 400;
+	line-height: 1.3;
 }
 
 h1 {
 	font-size: 3rem;
-	margin: 2rem 0 3rem 0;
+	margin: 1rem 0 3rem 0;
 }
 h2 {
 	font-size: 1.8rem;
+	margin: 2.5rem 0 1.25rem 0;
 }
 h3 {
 	font-size: 1.4rem;
+	margin: 1.5rem 0 0.75rem 0;
 }
 h4 {
 	font-size: 1.2rem;
+	margin: 1.5rem 0 0.75rem 0;
 }
 
 code {
@@ -96,7 +100,7 @@ a.nav {
 		}
 		.slash {
 			margin-right: 0.4ch;
-			transform: scale(0.5, 0.7) rotate(72deg);
+			transform: scale(0.5, 0.6) rotate(72deg);
 		}
 	}
 }
@@ -116,15 +120,15 @@ a.external {
 }
 
 blockquote {
-	border-left: 2px solid var(--text-2);
+	border-left: 2px solid var(--txt-2);
 	padding-left: 1.5rem;
 	margin: 2rem 0;
-	color: var(--text-2);
+	color: var(--txt-2);
 }
 hr {
 	border: none;
 	border-top: 2px solid var(--bg-2);
-	margin: 2rem 0;
+	margin: 1.5rem 0;
 }
 strong {
 	font-weight: 600;
@@ -138,10 +142,5 @@ strong {
 	a {
 		font-weight: 600;
 		text-decoration: underline;
-	}
-	h2,
-	h3,
-	h4 {
-		margin-top: 2rem;
 	}
 }
