--- a/src/app.scss
+++ b/src/app.scss
@@ -162,3 +162,14 @@ strong {
 		text-decoration: underline;
 	}
 }
+
+iconify-icon {
+	vertical-align: sub;
+	margin-right: 0.5ch;
+	margin-bottom: 0.1ch;
+	font-size: 1.1em;
+}
+
+.icon {
+	vertical-align: sub;
+}
