--- a/src/app.scss
+++ b/src/app.scss
@@ -137,6 +137,22 @@ a.external {
 	}
 }
 
+a.link {
+	.arrow {
+		display: inline-block;
+		margin-left: 0.5ch;
+		opacity: 0;
+		transform: translateX(-0.6em);
+		transition: 0.2s;
+	}
+	&:hover {
+		.arrow {
+			transform: translateX(0);
+			opacity: 1;
+		}
+	}
+}
+
 blockquote {
 	border-left: 2px solid var(--txt-2);
 	padding-left: 1.5rem;
