--- a/src/app.scss
+++ b/src/app.scss
@@ -40,6 +40,7 @@ h4 {
 	font-weight: 400;
 	line-height: 1.3;
 	color: var(--txt-0);
+	line-height: 1.5;
 }
 
 h1 {
@@ -47,7 +48,7 @@ h1 {
 	margin: 1rem 0 3rem 0;
 }
 h2 {
-	font-size: 1.8rem;
+	font-size: 2rem;
 	margin: 3rem 0 1.25rem 0;
 }
 h3 {
