--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 :root {
 	--bg: hsl(220, 10%, 8%);
-	--bg-2: hsl(220, 10%, 15%);
+	--bg-2: hsl(220, 10%, 10%);
+	--bg-3: hsl(220, 10%, 16%);
 	--txt-0: hsl(220, 45%, 90%);
 	--txt: hsl(220, 30%, 80%);
 	--txt-2: hsl(220, 11%, 60%);
@@ -164,7 +165,7 @@ blockquote {
 }
 hr {
 	border: none;
-	border-top: 2px solid var(--bg-2);
+	border-top: 2px solid var(--bg-3);
 	margin: 1.5rem 0;
 }
 strong {
@@ -191,4 +192,8 @@ iconify-icon {
 
 .icon {
 	vertical-align: sub;
+}
+
+.sub {
+	color: var(--txt-2);
 }
