--- a/src/app.scss
+++ b/src/app.scss
@@ -19,7 +19,7 @@
 html {
 	height: 100%;
 	scrollbar-width: thin;
-	scrollbar-color: var(--bg-2) transparent;
+	scrollbar-color: var(--bg-3) transparent;
 	scrollbar-gutter: stable;
 }
 
@@ -63,9 +63,10 @@ h4 {
 
 code {
 	font-family: 'Space Mono', monospace;
-	background: var(--bg-2);
-	padding: 0 0.2em;
+	background: var(--bg-3);
+	padding: 0 0.3em;
 	font-size: 0.9em;
+	border-radius: 0.2em;
 }
 
 a {
