--- a/src/app.scss
+++ b/src/app.scss
@@ -41,7 +41,7 @@ h4 {
 	font-weight: 400;
 	line-height: 1.3;
 	color: var(--txt-0);
-	line-height: 1.5;
+	line-height: 1.3;
 }
 
 h1 {
@@ -90,6 +90,16 @@ button {
 	&:hover {
 		cursor: pointer;
 	}
+}
+
+p {
+	font-size: 1.1rem;
+	line-height: 1.75;
+}
+
+div.description {
+	line-height: 1.5;
+	color: var(--txt-2);
 }
 
 .pfp {
@@ -152,6 +162,7 @@ a.link {
 	}
 	&:hover {
 		.arrow {
+			width: auto;
 			transform: translateX(0);
 			opacity: 1;
 		}
@@ -174,10 +185,6 @@ strong {
 }
 
 .content {
-	p {
-		font-size: 1.1rem;
-		line-height: 1.75;
-	}
 	a {
 		font-weight: 600;
 		text-decoration: underline;
@@ -201,4 +208,10 @@ iconify-icon {
 
 .sub {
 	color: var(--txt-2);
+}
+
+@media (max-width: 1000px) {
+	:root {
+		font-size: 87.5%;
+	}
 }
