--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,6 @@
 :root {
 	--bg: hsl(220, 10%, 8%);
-	--bg-2: hsl(220, 10%, 10%);
+	--bg-2: hsl(220, 10%, 11%);
 	--bg-3: hsl(220, 10%, 16%);
 	--txt-0: hsl(220, 45%, 90%);
 	--txt: hsl(220, 30%, 80%);
@@ -63,10 +63,28 @@ h4 {
 
 code {
 	font-family: 'Space Mono', monospace;
-	background: var(--bg-3);
+	background: var(--bg-2);
 	padding: 0 0.3em;
-	font-size: 0.9em;
-	border-radius: 0.2em;
+	font-size: 1rem;
+	border-radius: 0.2rem;
+}
+
+pre {
+	font-family: 'Space Mono', monospace;
+	background: var(--bg-2);
+	padding: 0.75rem;
+	border-radius: 0.2rem;
+	overflow-x: auto;
+	font-size: 1rem;
+
+	code {
+		background: none;
+		padding: initial;
+	}
+}
+
+ol > li {
+	font-size: 1.1rem;
 }
 
 a {
