--- a/src/app.scss
+++ b/src/app.scss
@@ -50,7 +50,7 @@ h1 {
 }
 h2 {
 	font-size: 2rem;
-	margin: 3rem 0 1.25rem 0;
+	margin: 2.5rem 0 1rem 0;
 }
 h3 {
 	font-size: 1.4rem;
@@ -227,8 +227,7 @@ figure {
 
 iconify-icon {
 	vertical-align: sub;
-	margin-right: 0.5ch;
-	margin-bottom: 0.1ch;
+	padding-right: 0.5ch;
 	font-size: 1.1em;
 }
 
