--- a/src/app.scss
+++ b/src/app.scss
@@ -2,9 +2,10 @@
 	--bg: hsl(220, 10%, 8%);
 	--bg-2: hsl(220, 10%, 11%);
 	--bg-3: hsl(220, 10%, 16%);
-	--txt-0: hsl(220, 45%, 90%);
-	--txt: hsl(220, 30%, 80%);
+	--txt-3: hsl(220, 11%, 35%);
 	--txt-2: hsl(220, 11%, 60%);
+	--txt: hsl(220, 30%, 80%);
+	--txt-0: hsl(220, 45%, 90%);
 	--blue: hsl(190, 70%, 50%);
 	--purple: hsl(240, 80%, 66%);
 	--pink: hsl(279, 80%, 66%);
@@ -224,7 +225,13 @@ figure {
 	a {
 		font-weight: 600;
 		text-decoration: underline;
+		text-decoration-color: var(--txt-3);
+		text-decoration-thickness: 2px;
 		word-break: break-all;
+		transition: text-decoration-color 0.2s;
+		&:hover {
+			text-decoration-color: var(--txt);
+		}
 	}
 
 	picture {
