--- a/src/app.scss
+++ b/src/app.scss
@@ -83,7 +83,7 @@ code {
 
 pre {
 	font-family: 'Space Mono', monospace;
-	background: var(--bg-2);
+	background: var(--bg-2) !important;
 	padding: 0.75rem;
 	// border-radius: 0.5rem;
 	overflow-x: auto;
